--- a/vote.html
+++ b/vote.html
@@ -14,8 +14,8 @@
             <h1 class="header-title">Центральная избирательная комиссия <br>Королевства Волерия</h1>
         </div>
         <nav class="header-links">
-            <a href="main.html">Главная</a>
-            <a href="index.html">Голосования</a>
+            <a href="index.html">Главная</a>
+            <a href="elections.html">Голосования</a>
             <a href="#">Профиль</a>
         </nav>
     </header>
