--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- TOP MENU -->
+   <!-- TOP MENU -->
     <header class="header">
-        <div class="header-left">
-            <img src="image/header_emblem.png" class="header-logo" alt="Герб Королевства Волерия">
-            <h1 class="header-title">Центральная избирательная комиссия <br>Королевства Волерия</h1>
+        <div class="header-top">
+            <div class="header-left">
+                <img src="image/header_emblem.png" class="header-logo" alt="Герб Королевства Волерия">
+                <h1 class="header-title">Центральная избирательная комиссия <br>Королевства Волерия</h1>
+            </div>
         </div>
         <nav class="header-links">
             <a href="index.html">Главная</a>
@@ -42,7 +44,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio.</p>
             </div>
             <div class="section-image">
-                <img src="image/passport.png" alt="Паспорт Волерии" style="padding-left: 200px;">
+                <img src="image/passport.png" alt="Паспорт Волерии">
             </div>
         </div>
         
