--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="main-content">
         <div class="content-section">
             <div class="section-image">
-                <img src="image/header_emblem.png" alt="ЦИК Волерии">
+                <img src="image/CEC.png" alt="ЦИК Волерии">
             </div>
             <div class="section-text">
                 <h2>Добро пожаловать на сайт ЦИК Королевства Волерия!</h2>
