--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <!-- TOP MENU -->
+    <!-- TOP MENU -->
     <header class="header">
-        <div class="header-top">
-            <div class="header-left">
-                <img src="image/header_emblem.png" class="header-logo" alt="Герб Королевства Волерия">
-                <h1 class="header-title">Центральная избирательная комиссия <br>Королевства Волерия</h1>
-            </div>
+        <div class="header-left">
+            <img src="image/header_emblem.png" class="header-logo" alt="Герб Королевства Волерия">
+            <h1 class="header-title">Центральная избирательная комиссия <br>Королевства Волерия</h1>
         </div>
         <nav class="header-links">
             <a href="index.html">Главная</a>
@@ -40,8 +38,8 @@
         
         <div class="content-section" id="register">
             <div class="section-text">
-                <h2>Как зарегестрировать на электронное голосование?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio.</p>
+                <h2>Как зарегестрироваться на электронное голосование?</h2>
+                <p>Чтобы подать заявку на электронное голосование на сайте ЦИК Королевства Волерия, вам нужно перейти во вкладку <a href="#" style="text-decoration: none;">Профиль</a> и заполнить форму. В форме потребуется ваше ФИО и личный гражданский номер, который выдается только после получения гражданства Королевства Волерия. После заполнения формы, вам в соцсети «ВКонтакте» напишет администратор для подтверждения регистрации. После подтверждения, вы сможете голосовать.</p>
             </div>
             <div class="section-image">
                 <img src="image/passport.png" alt="Паспорт Волерии">
