--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         
         <div class="content-section" id="register">
             <div class="section-text">
-                <h2>Как зарегестрироваться на электронное голосование?</h2>
+                <h2>Как зарегистрироваться на электронное голосование?</h2>
                 <p>Чтобы подать заявку на электронное голосование на сайте ЦИК Королевства Волерия, вам нужно перейти во вкладку <a href="#" style="text-decoration: none;">Профиль</a> и заполнить форму. В форме потребуется ваше ФИО и личный гражданский номер, который выдается только после получения гражданства Королевства Волерия. После заполнения формы, вам в соцсети «ВКонтакте» напишет администратор для подтверждения регистрации. После подтверждения, вы сможете голосовать.</p>
+                <div class="action-buttons">
+                    <a href="#" class="action-button">Профиль</a>
+                </div>
             </div>
             <div class="section-image">
                 <img src="image/passport.png" alt="Паспорт Волерии">
@@ -52,7 +55,11 @@
             </div>
             <div class="section-text">
                 <h2>Как проголосовать?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio.</p>
+                <p>Чтобы проголосовать, перейдите во вкладку <a href="elections.html">Голосования</a>. Если активных и планируемых голосований нет, будет оповещение «в настоящее время нет активных голосований». Если есть планируемые голосования, вы сможете проголосовать только после их начала. Если присутствуют активные голосования, вы сможете перейти к электронной бюллетени, нажав на блок голосования. После этого, вы перейдете на страницу с голосованием и сможете выбрать вариант(ы) ответа, после чего нажмите на кнопку «Проголосовать» под опросом. Ваша бюллетень перейдет в единый реестр и голос засчитается.
+</p>
+                <div class="action-buttons">
+                    <a href="elections.html" class="action-button">Голосования</a>
+                </div>
             </div>
         </div>
     </div>
