--- a/elections.html
+++ b/elections.html
@@ -16,7 +16,7 @@
         <nav class="header-links">
             <a href="index.html">Главная</a>
             <a href="elections.html">Голосования</a>
-            <a href="#">Профиль</a>
+            <a href="profile.html">Профиль</a>
         </nav>
     </header>
 
