--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="header-links">
             <a href="index.html">Главная</a>
             <a href="elections.html">Голосования</a>
-            <a href="#">Профиль</a>
+            <a href="profile.html">Профиль</a>
         </nav>
     </header>
 
@@ -41,7 +41,7 @@
                 <h2>Как зарегистрироваться на электронное голосование?</h2>
                 <p>Чтобы подать заявку на электронное голосование на сайте ЦИК Королевства Волерия, вам нужно перейти во вкладку <a href="#" style="text-decoration: none;">Профиль</a> и заполнить форму. В форме потребуется ваше ФИО и личный гражданский номер, который выдается только после получения гражданства Королевства Волерия. После заполнения формы, вам в соцсети «ВКонтакте» напишет администратор для подтверждения регистрации. После подтверждения, вы сможете голосовать.</p>
                 <div class="action-buttons">
-                    <a href="#" class="action-button">Профиль</a>
+                    <a href="profile.html" class="action-button">Профиль</a>
                 </div>
             </div>
             <div class="section-image">
@@ -51,7 +51,7 @@
         
         <div class="content-section" id="vote">
             <div class="section-image">
-                <img src="image/building.png" alt="Здание ЦИК">
+                <img src="image/building.png" alt="Здание ЦИК" style="border-radius: 16px;">
             </div>
             <div class="section-text">
                 <h2>Как проголосовать?</h2>
