--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="section-image">
-                <img src="image/passport.png" alt="Паспорт Волерии">
+                <img src="image/passport.png" alt="Паспорт Волерии" style="max-width: 60%;">
             </div>
         </div>
         
